Fixing component collapsing on mobile browsers.

--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -24,6 +24,7 @@ html.intro-active::-webkit-scrollbar {
   left: 0;
   width: 100%;
   height: 100vh;
+  height: 100svh;
   overflow: hidden;
 }
 
